--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Pillow==3.2.0
 psycopg2==2.6.1
 ptyprocess==0.5.1
 python-dateutil==2.5.2
+pytest==2.9.1
 simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.2.1
